# AirQualityApp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  runner.cpp
GUI/: CMakeLists.txt  air_quality_gui.cpp  air_quality_gui.h
GUI/Components/: config.h  data.h  main_menu_bar.h  process_data.h  window.h
GUI/DearImgui/: CMakeLists.txt
GUI/Utility/: CMakeLists.txt
GUI/Utility/AirMeasurementFetcher/: air_measurement_fetcher.cpp  air_measurement_fetcher.h
GUI/Utility/AirMeasurementFetcher/Test/: air_measurement_fetcher_test.cpp
GUI/Utility/Algorithms/: linear_regression.cpp  linear_regression.h
GUI/Utility/Algorithms/Test/: linear_regression_test.cpp
GUI/Utility/DataScraper/: data_scraper.cpp  data_scraper.h
GUI/Utility/DataScraper/Test/: data_scraper_test.cpp
GUI/Utility/DataTypes/: data_types.h
GUI/Utility/DateTime/: date_time.cpp  date_time.h
GUI/Utility/DateTime/Test/: date_time_test.cpp
GUI/Utility/JsonParser/: json_parser.cpp  json_parser.h
GUI/Utility/JsonParser/Test/: json_parser_test.cpp
Scripts/: build_and_run.sh  install.sh  run_tests.sh
Utility/: CMakeLists.txt
Utility/Algorithms/Test/: linear_regression_test.cpp
Utility/DataScraper/: data_scraper.cpp  data_scraper.h
Utility/DataScraper/Test/: data_scraper_test.cpp
Utility/DataTypes/: data_types.h
Utility/JsonParser/: json_parser.cpp
Utility/JsonParser/Test/: json_parser_test.cpp
